nde-arc/src/assets/css/custom.css
:root {
  --main-col-color: #003058; /* this should be a darker color */
  --second-col-color:#f7f7f9; /* this should be a lighter color */
}

/** color changes to establish branding **/
.main-menu-label, .main-manu-label {color:var(--main-col-color) !important;}
nde-general-search-header {background-image: none !important;background-color: var(--main-col-color);}
 .mat-mdc-unelevated-button:not(:disabled), nde-request-card .mat-mdc-unelevated-button:not(:disabled) {background-color:var(--main-col-color) !important;}
 .main-menu-label .mat-icon, .main-manu-label .mat-icon, .mat-mdc-button:not(:disabled) .mat-icon, .icon-primary-fill.mat-icon svg path {fill: var(--main-col-color) !important ;}
 .mat-mdc-button:not(:disabled), .mat-mdc-button:not(:disabled) svg path, nde-online-availability .mat-icon svg path, .quicklinks-menu-item-text {color:var(--main-col-color) !important;border-color:var(--main-col-color) !important;}
 .request-card[_ngcontent-ng-c3616819823] .mat-icon svg path {stroke: var(--main-col-color) !important; color:var(--main-col-color) !important; }
 .quicklink-menu-item path {fill: var(--main-col-color) !important;}
nde-top-bar {background: var(--main-col-color) !important ;}
nde-top-bar .mat-mdc-button:not(:disabled).advanced-search-button {color:#fff !important;}
nde-top-bar .mat-mdc-button:not(:disabled) svg path {color: #fff !important; border-color: #fff !important;}
 /* correct a couple elements changed by the above */
.search-dropdown-container-button-text {color:var(--sys-on-background);}  
.advanced-search-button.advanced-search-btn-home-page {color:var(--whiteText) !important;}
.available-at-button.mat-mdc-button:not(:disabled) {color:unset !important;} /* availability statement that shows under physical items */
.mat-mdc-button[aria-label^="No Online"]:not(:disabled){color:unset !important;} /* correct color of "No Online Access" button that appears in some cases */

/* larger logo / header */
nde-logo img {
  height: 50px;
  padding-right: 1rem;
}

/* let the custom search/header area size naturally */
.custom-search-bar-container {
  height: auto !important;
}

/* ARC-colored top search/header background */
.top-bar-background-image {
  background: var(--main-col-color);
  background-image: unset !important;
  border-bottom:8px solid var(--second-col-color);
}

/* remove default background overlay */
.background-overlay {
  display: none;
}

/* hide default label visually */
.custom-search-bar-container h1 
.custom-search-bar-container h2 {
  position: absolute !important;
  left: -99999px;
}

/* enlarge record titles */
nde-record-title .record-title .mat-body-large, .browse-search-item-text h3 {
  font-size: 1.3em !important;
}


/* better render full-text buttons */
.quicklink-button {
  font-weight: 500 !important;
}

/* emphasize full-text link text */
.view-it-text h3.package-name {
  font-size: 1.4rem;
  border-bottom: 2px solid var(--sys-primary);
}
.view-it-text h3.package-name:focus, .view-it-text h3.package-name:hover {
  border-bottom:none;
} 
/* Apply background to collection discovery names for contrast */
.collection-discovery-header .content {
  background-color: rgba(0, 0, 0, 0.6);
  padding: 8px;
  border-radius: 4px;
}

.grid-item .lr-availability-display {position:relative; bottom:40px;}

/* hide extra links from MARC 856 and NZ GES */
nde-full-display-links .links-container span{
  display: none;  
}

/* hide campus links in request form; look out for unintended consequences of this selector */
.mat-mdc-optgroup-label {display: none !important;}

/* icon in request form */
.request-card path {
  stroke: var(--main-col-color) !important;
} 
/* hide sign-in prompt above ILL link  */
nde-notification[message^="nui\.request\.signin"]:has(+ nde-request-card[data-qa*="interlibrary loan"]) {display: none;} 
/* hide default ILL link */
nde-request-card[data-qa*="interlibrary loan"] mat-card {display: none;}
/* hide AI research assistant widget */
nde-research-assistant-side-bar {
  display: none;
}

/* remove outline when custom resource type icons show */
.record-thumbnail[src*="assets/images/icon"] {outline:unset !important;}

/* hide periodical coverage info in article results */
nde-view-it-card .availability-text {
  display: none !important;
}

/* but show it in journal search */
#journal-db-layout-container nde-view-it-card .availability-text {
  display: flex !important;
}

/* avoid duplicate local notes */
nde-full-display-service-container-before-from-remote-0 .lr-note {
  display: none;
}
#nde\.getit\.locations .lr-note-area-holdingstop {
  display: block;
}

nde-collection-discovery-gallery .lr-note-section {
  padding-right:10px;
}

/* vary local notes look for list view in collection discovery */
nde-collection-discovery-list .lr-note-section {
  left:80px !important;
  top:-20px !important;
}

/* increase size of full-text links */
h5.package-name {
  font-size: 1.3rem !important;
}
h5.package-name:focus, h5.package-name:hover {
  text-decoration: underline;
}


/* links in public notes */
.view-it-text-with-icon a:link, .view-it-text-with-icon a:visited {color:var(--sys-primary);}
h5.package-name+mat-icon {
  height: 1.3rem !important;
  width: 1.3rem !important;
}

nde-notification > div { border:2px solid var(--main-col-color); font-size:1.3rem;}
#notifText {font-size:1em; }
nde-login .mat-icon, nde-login .availability-button {color:var(--main-col-color) !important; fill:var(--main-col-color); }
nde-full-display-service-container nde-login .availability-button {color:var(--main-col-color) !important;font-size:1.2rem !important;}
/* library card area */
/* increase contrast - this area fails automated check */
nde-personal-details-view .detail_name {
  color: var(--sys-on-surface) !important;
}



/* only show problem report button in brief results when hovering on record */
nde-search-results .lr-problem-reporter {opacity:0;}
nde-search-results nde-search-result-item-container:hover .lr-problem-reporter, nde-search-result-item-container:focus .lr-problem-reporter {opacity:1;}

/* browse page - hide default element because otherwise it loads briefly before the custom component replaces it */
nde-browse-home-page .container:first-child {
  display: none;
}


/* footer */
footer {
  background-color: var(--second-col-color);
  border-top: 2px solid var(--sys-on-secondary-fixed);
  margin-top:40px;
}

footer .main-landing-page {
  margin-block-end: 20px;
}

/* footer .grid-item {margin-bottom:2rem;} */
footer li a:link, footer li a:visited {
  color: var(--sys-on-secondary-fixed);
  text-decoration: none;
}

footer li a:hover, footer li a:focus {
  text-decoration: underline;
}

#subfooter {
  background-color: var(--main-col-color);
  /* padding-left:2rem; */
}

#subfooter a:link, #subfooter a:visited {
  color: #fff;
  text-decoration: none;
}

#subfooter a:hover, #subfooter a:focus {
  text-decoration: underline;
}

#subfooter-libraries {
  gap: 1rem;
}

/* chat widget */
.s-lch-widget-float {
  bottom: 58px !important;
  z-index:500 !important;
}
/* don't conflict with up-to-top arrow or login prompt */
.cdk-overlay-container:has(nde-login) ~ div[id^="s-lch-widget"] {
bottom: 120px !important;
}
/* only show problem report button in brief results when hovering on record */
nde-search-results .lr-problem-reporter {opacity:0;}
nde-search-results nde-search-result-item-container:hover .lr-problem-reporter, nde-search-result-item-container:focus .lr-problem-reporter {opacity:1;}
@media (min-width: 768px) {
  
  /* increase footer padding for desktop */
  #footer-container {padding-left: 3rem; padding-right: 3rem;
  }
 .collection-discovery-list .lr-availability-display {margin-left:12rem !important; }
  /* hide phone number linking styles for desktop */
  a[href^="tel"]:hover, a[href^="tel"]:focus {
    text-decoration: none !important;
    cursor: default;
  }
  


}

